--- a/public/assets/scss/variable.scss
+++ b/public/assets/scss/variable.scss
@@ -8,23 +8,23 @@ File: scss
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700');
 
 $bodyfont:'Poppins', sans-serif;
-$headingfont:'Poppins', sans-serif; 
+$headingfont:'Poppins', sans-serif;
 
 
 /*Theme Colors*/
 
-$topbar: #1976d2;
+$topbar: #E11225;
 $sidebar: #fff;
 $sidebar-white: #e5edef;
 $sidebar-alt:#f2f6f8;
 $bodycolor: #eef5f9;
 $headingtext: #455a64;
-$bodytext: #67757c; 
+$bodytext: #67757c;
 $sidebar-text: #607d8b;
 $sidebar-icons: #99abb4 ;
 
 $light-text: #a6b7bf;
-$themecolor: #1976d2;
+$themecolor: #E11225;
 $themecolor-alt: #26c6da;
 $themecolor-dark: #028ee1;
 
@@ -33,7 +33,7 @@ $danger: #ef5350;
 $success: #26dad2;
 $warning: #ffb22b;
 $primary: #5c4ac7;
-$info: #1976d2;
+$info: #E11225;
 $inverse: #2f3d4a;
 $muted: #99abb4;
 $dark: #263238;
@@ -48,7 +48,7 @@ $light-warning: #fff8ec;
 $light-primary: #f1effd;
 $light-info: #cfecfe;
 $light-inverse: #f6f6f6;
-$light-megna: #e0f2f4; 
+$light-megna: #e0f2f4;
 
 
 
@@ -72,7 +72,7 @@ $danger-shadow-hover:0 14px 26px -12px rgba(239,83,80,.42), 0 4px 23px 0 rgba(0,
 
 $success-shadow:0 2px 2px 0 rgba(40,190,189,.14), 0 3px 1px -2px rgba(40,190,189,.2), 0 1px 5px 0 rgba(40,190,189,.12);
 $success-shadow-hover:0 14px 26px -12px rgba(40,190,189,.42), 0 4px 23px 0 rgba(0,0,0,.12), 0 8px 10px -5px rgba(40,190,189,.2);
-    
+
 $primary-shadow:0 2px 2px 0 rgba(116,96,238,.14), 0 3px 1px -2px rgba(116,96,238,.2), 0 1px 5px 0 rgba(116,96,238,.12);
 $primary-shadow-hover:0 14px 26px -12px rgba(116,96,238,.42), 0 4px 23px 0 rgba(0,0,0,.12), 0 8px 10px -5px rgba(116,96,238,.2);
 
